Updated mod desc, url, and authors

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,11 +21,11 @@ mod_id = neonium
 mod_name = Neonium
 
 # Mod Metadata (Optional)
-mod_description = Neonium is a fork of Vintagium by Asek3, improving Minecraft's rendering engine to be more optimized - providing higher framerates and reduced stuttering
-mod_url = https://github.com/NeoX2025Gaming/Neonium
+mod_description = Colorium is a fork of Neonium (by NeoX2025Gaming), which is a fork of Vintagium(by Asek3), improving Minecraft's rendering engine to be more optimized - providing higher framerates and reduced stuttering
+mod_url = https://github.com/kedatubayani/Colorium
 mod_update_json =
 # Delimit authors with commas
-mod_authors = NeoX2025Gaming, Asek3, embeddedt, CaffeineMC
+mod_authors = KedatuBayani, NeoX2025Gaming, Asek3, embeddedt, CaffeineMC
 mod_credits = TheMade4, NanoLive
 mod_logo_path = assets/neonium/logo.png
 
